--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body,
+html {
+  width: 100%;
+  height: 100vh;
+}
+
+body {
+  background: #000;
+}
+
 /* ============================ UTILITY CLASSES ============================ */
 @font-face {
   font-family: "bitterRose";
@@ -123,5 +139,18 @@
   }
   100% {
     text-shadow: 0 0 0 transparent;
+  }
+}
+
+/* ================================ MEDIA QUERY ============================= */
+@media only screen and (max-width: 768px) {
+  .subhead::before {
+    font-size: 7rem;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .subhead::before {
+    font-size: 6rem;
   }
 }
