add slider section

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ html {
 
 body {
   background: #000;
+  overflow-x: hidden;
 }
 
 /* ============================ UTILITY CLASSES ============================ */
@@ -120,7 +121,6 @@ body {
   color: red;
   text-shadow: 0 0 5px #000;
   animation: blink infinite linear 1s;
-  font-family: "Chillax", sans-serif;
   z-index: -1;
 }
 
@@ -140,6 +140,40 @@ body {
   100% {
     text-shadow: 0 0 0 transparent;
   }
+}
+.cardTitle {
+  position: relative;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
+}
+
+.cardTitle1 {
+  text-shadow: -2px -2px 0 #024fa8, 2px -2px 0 #024fa8, -2px 2px 0 #024fa8,
+    2px 2px 0 #024fa8;
+}
+
+.cardTitle2 {
+  text-shadow: -2px -2px 0 green, 2px -2px 0 green, -2px 2px 0 green,
+    2px 2px 0 green;
+}
+
+.cardTitle3 {
+  text-shadow: -2px -2px 0 rgb(255, 0, 255), 2px -2px 0 purple,
+    -2px 2px 0 purple, 2px 2px 0 purple;
+}
+
+.cardTitle4 {
+  text-shadow: -2px -2px 0 gray, 2px -2px 0 gray, -2px 2px 0 gray,
+    2px 2px 0 gray;
+}
+
+.cardTitle5 {
+  text-shadow: -2px -2px 0 rgb(221, 177, 0), 2px -2px 0 rgb(221, 177, 0),
+    -2px 2px 0 rgb(221, 177, 0), 2px 2px 0 rgb(221, 177, 0);
 }
 
 /* ================================ MEDIA QUERY ============================= */
