--- a/src/index.css
+++ b/src/index.css
@@ -182,6 +182,10 @@ body {
     -2px 2px 0 rgb(221, 177, 0), 2px 2px 0 rgb(221, 177, 0);
 }
 
+.text-stroke {
+  text-shadow: 0 0 20px black;
+}
+
 /* ================================ MEDIA QUERY ============================= */
 @media only screen and (max-width: 768px) {
   .subhead::before {
