add shakes and dessert panel

--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,13 @@ body {
 }
 
 @font-face {
+  font-family: "noto-sans-jp";
+  src: url("/fonts/noto-sans-jp.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
   font-family: "Roboto";
   src: url("/fonts/Roboto-Light.ttf") format("truetype");
   font-weight: normal;
@@ -184,6 +191,11 @@ body {
 
 .text-stroke {
   text-shadow: 0 0 20px black;
+}
+
+.text-stroke-custom {
+  -webkit-text-stroke: 1px black;
+  color: white;
 }
 
 /* ================================ MEDIA QUERY ============================= */
